macro_proc_func2/tests/fail2.stderr
error: Only [,] is qualified delimiter
 --> tests/fail2.rs:3:21
  |
3 |     let out = mul!(3; 5);
  |                     ^
